--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-index-empty/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-index-empty/view.html
@@ -140,7 +140,7 @@ Erweitert
 <div></div>
 <div>
 <div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/lists.todo">Mehrere zusammen drucken
+<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/list_print_generators">Mehrere zusammen drucken
 </a>
 </div>
 </div>
