--- a/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_single_finish/view.html
+++ b/spec/fixtures/views/Score_List_create_lists_uses_list_factory-new-generator_params_single_finish/view.html
@@ -142,7 +142,7 @@ Erweitert
 </tr>
 </table>
 <fieldset class="form-group boolean optional score_list_factory_hidden"><div class="form-check"><input name="score_list_factory[hidden]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list_factory[hidden]" id="score_list_factory_hidden" /><label class="form-check-label boolean optional" for="score_list_factory_hidden">Startliste verstecken</label><small class="form-text text-muted">Manchmal ist es besser, die Startliste zuerst zu verstecken. Es kann dann zum Beispiel kontrolliert werden, ob die Reihenfolge stimmt.</small></div></fieldset>
-<fieldset class="form-group boolean optional score_list_factory_separate_target_times"><div class="form-check"><input name="score_list_factory[separate_target_times]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list_factory[separate_target_times]" id="score_list_factory_separate_target_times" /><label class="form-check-label boolean optional" for="score_list_factory_separate_target_times">Zeiten für jedes Ziel separat aufnehmen</label><small class="form-text text-muted">Die Zeiten für das linke und rechte Ziel werden einzelnd erfasst. Die langsamere Zeit wird zur Wertungszeit.</small></div></fieldset>
+<fieldset class="form-group boolean optional score_list_factory_separate_target_times form-group-valid"><div class="form-check"><input name="score_list_factory[separate_target_times]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" checked="checked" name="score_list_factory[separate_target_times]" id="score_list_factory_separate_target_times" /><label class="form-check-label boolean optional" for="score_list_factory_separate_target_times">Zeiten für jedes Ziel separat aufnehmen</label><small class="form-text text-muted">Die Zeiten für das linke und rechte Ziel werden einzelnd erfasst. Die langsamere Zeit wird zur Wertungszeit.</small></div></fieldset>
 <fieldset class="form-group boolean optional score_list_factory_show_best_of_run"><div class="form-check"><input name="score_list_factory[show_best_of_run]" type="hidden" value="0" autocomplete="off" /><input class="form-check-input boolean optional" type="checkbox" value="1" name="score_list_factory[show_best_of_run]" id="score_list_factory_show_best_of_run" /><label class="form-check-label boolean optional" for="score_list_factory_show_best_of_run">Beste des Laufs anzeigen</label><small class="form-text text-muted">Zeige den Laufbesten hervorgehoben an, um z.B. schneller über das Schläuchemessen zu entscheiden.</small></div></fieldset>
 <button name="button" type="submit" class="btn btn-primary mt-3" data-disable-with="Bitte warten...">Startliste erstellen</button>
 
@@ -177,8 +177,8 @@ Löschangriff Nass
 <th>Wertungen</th>
 <td>
 <ul>
-<li><a href="/2024/mv-cup/assessments/UUID">Löschangriff Nass - Männer</a></li>
 <li><a href="/2024/mv-cup/assessments/UUID">Löschangriff Nass - Frauen</a></li>
+<li><a href="/2024/mv-cup/assessments/UUID">Löschangriff Nass - Männer</a></li>
 </ul>
 </td>
 </tr>
@@ -198,8 +198,8 @@ Löschangriff Nass
 <th>Ergebnislisten</th>
 <td>
 <ul>
-<li><a href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Männer</a></li>
 <li><a href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Frauen</a></li>
+<li><a href="/2024/mv-cup/score/results/UUID">Löschangriff Nass - Männer</a></li>
 </ul>
 </td>
 </tr>
