--- a/spec/fixtures/views/Score_ListPrintGenerator_manage_list_print_generators_uses_CRUD-index-one/view.html
+++ b/spec/fixtures/views/Score_ListPrintGenerator_manage_list_print_generators_uses_CRUD-index-one/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Startlisten - MV-Cup - Feuerwehrsport</title>
+<title>MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Startlisten</p>
+<p class='lead m-0 ms-1'>Mehrere Startlisten drucken</p>
 
 </div>
 </header>
@@ -67,11 +67,7 @@ Benutzer
 </a>
 </div>
 <div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
-</a>
-</div>
-<div class='nav-item active'>
-<a class="nav-link active" aria-current="page" href="/2024/mv-cup/score/lists">Startlisten
+<a class="nav-link" href="/2024/mv-cup/score/lists">Startlisten
 </a>
 </div>
 <div class='nav-item'>
@@ -117,59 +113,35 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
+<div class='alert alert-info'>Die Änderungen wurden gespeichert.</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
 <div class='row g-4'>
-<div class='col-md-8'>
+<div class='col-md-12'>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Startlisten</h4>
-<a class="card-primary-action" href="/2024/mv-cup/score/list_factories/new">Hinzufügen
+<h4 class='m-0 py-2 ps-3'>Mehrere Startlisten drucken</h4>
+<a class="card-primary-action" href="/2024/mv-cup/score/list_print_generators/new">Hinzufügen
 <i class='far fa-square-plus'></i>
 </a>
 </div>
 </div>
 <table class='table'>
 <tr>
-<td style='width: 3rem'>
-<i class='far fa-eye-slash' title='Nicht öffentlich'></i>
-</td>
-<td>
-<img src="/assets/disciplines/hl.svg" width="20" height="20" />
-Hakenleitersteigen - Frauen - Lauf 1
-</td>
-<td class='text-end'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
-</td>
+<th>Name</th>
+<th></th>
 </tr>
 <tr>
-<td style='width: 3rem'>
-<i class='far fa-eye' title='Öffentlich'></i>
-</td>
-<td>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff Nass - Frauen - Lauf 1
-</td>
+<td>Löschangriff Nass - Frauen - Lauf 1, Löschangriff Nass - Frauen - Lauf 1</td>
 <td class='text-end'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_print_generators/UUID">Generieren</a>
+<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/list_print_generators/UUID/edit">Bearbeiten</a>
 </td>
 </tr>
 </table>
 
-
-<div class='card-footer'>
-<div class='d-flex justify-content-between align-items-start'>
-<div></div>
-<div>
-<div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/list_print_generators">Mehrere zusammen drucken
-</a>
-</div>
-</div>
-</div>
-</div>
 </div>
 </div>
 </div>
