--- a/spec/fixtures/views/Score_ListPrintGenerator_manage_list_print_generators_uses_CRUD-new-with-error/view.html
+++ b/spec/fixtures/views/Score_ListPrintGenerator_manage_list_print_generators_uses_CRUD-new-with-error/view.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
-<title>Startlisten - MV-Cup - Feuerwehrsport</title>
+<title>MV-Cup - Feuerwehrsport</title>
 <meta content='width=device-width,initial-scale=1' name='viewport'>
 
 
@@ -51,7 +51,7 @@ Benutzer
 <div class='container'>
 <h1>MV-Cup</h1>
 <p class='lead m-0 ms-1'>29.02.2024 - Rostock</p>
-<p class='lead m-0 ms-1'>Startlisten</p>
+<p class='lead m-0 ms-1'>Mehrere Startlisten drucken</p>
 
 </div>
 </header>
@@ -67,11 +67,7 @@ Benutzer
 </a>
 </div>
 <div class='nav-item'>
-<a class="nav-link" href="/2024/mv-cup/people">Wettkämpfer
-</a>
-</div>
-<div class='nav-item active'>
-<a class="nav-link active" aria-current="page" href="/2024/mv-cup/score/lists">Startlisten
+<a class="nav-link" href="/2024/mv-cup/score/lists">Startlisten
 </a>
 </div>
 <div class='nav-item'>
@@ -117,62 +113,59 @@ Erweitert
 </header>
 <div class='container mt-4'>
 <div class='alert-flash'>
+<div class='alert alert-danger'>Bitte überprüfen Sie folgende Fehler:</div>
 </div>
 </div>
 <div class='pb-4 mt-4 container'>
-<div class='row g-4'>
-<div class='col-md-8'>
+<div class='row mb-3'>
+<div class='col-md-7'>
+<form class="simple_form edit_score_list_print_generator" id="edit_score_list_print_generator_UUID" novalidate="novalidate" action="/2024/mv-cup/score/list_print_generators/UUID" accept-charset="UTF-8" method="post"><input type="hidden" name="_method" value="patch" autocomplete="off" /><div class="form-group my-2 hidden score_list_print_generator_print_list form-group-invalid"><input class="form-control is-invalid hidden" aria-invalid="true" autocomplete="off" type="hidden" value="foobar" name="score_list_print_generator[print_list]" id="score_list_print_generator_print_list" /><div class="invalid-feedback">Print list ist nicht gültig</div></div>
 <div class='card'>
 <div class='card-header p-0'>
 <div class='d-flex justify-content-between'>
-<h4 class='m-0 py-2 ps-3'>Startlisten</h4>
-<a class="card-primary-action" href="/2024/mv-cup/score/list_factories/new">Hinzufügen
-<i class='far fa-square-plus'></i>
-</a>
+<h4 class='m-0 py-2 ps-3'>Reihenfolge auf der generierten Liste</h4>
 </div>
 </div>
-<table class='table'>
-<tr>
-<td style='width: 3rem'>
-<i class='far fa-eye-slash' title='Nicht öffentlich'></i>
-</td>
-<td>
-<img src="/assets/disciplines/hl.svg" width="20" height="20" />
-Hakenleitersteigen - Frauen - Lauf 1
-</td>
-<td class='text-end'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
-</td>
-</tr>
-<tr>
-<td style='width: 3rem'>
-<i class='far fa-eye' title='Öffentlich'></i>
-</td>
-<td>
-<img src="/assets/disciplines/la.svg" width="20" height="20" />
-Löschangriff Nass - Frauen - Lauf 1
-</td>
-<td class='text-end'>
-<a class=" btn btn-light btn-sm" href="/2024/mv-cup/score/lists/UUID">Ansehen</a>
-</td>
-</tr>
-</table>
+<div class='card-body'>
+<ul class='list-group sortable-list' id='sortable-list-elements'>
+</ul>
 
-
+</div>
 <div class='card-footer'>
 <div class='d-flex justify-content-between align-items-start'>
-<div></div>
-<div>
-<div class='btn-group'>
-<a class="btn btn-outline-secondary btn-sm" href="/2024/mv-cup/score/list_print_generators">Mehrere zusammen drucken
-</a>
+<div><button name="button" type="submit" class="btn btn-primary" data-disable-with="Bitte warten...">Generieren</button>
+<a class="btn btn-secondary" href="/2024/mv-cup/score/list_print_generators">Abbrechen</a>
 </div>
 </div>
 </div>
 </div>
+</form></div>
+<div class='col-md-5'>
+<div class='card'>
+<div class='card-header p-0'>
+<div class='d-flex justify-content-between'>
+<h4 class='m-0 py-2 ps-3'>Mögliche offene Werte</h4>
+</div>
+</div>
+<div class='card-body'>
+<ul class='list-group sortable-list' id='sortable-list-possible-elements'>
+<li class='list-group-item d-flex justify-content-between align-items-start' data-print-id='UUID'>
+Löschangriff Nass - Frauen - Lauf 1
+<span class='badge rounded-pill bg-warning'>
+Ein Starter
+</span>
+</li>
+
+</ul>
+
 </div>
 </div>
 </div>
+<div class='col-md-4'>
+
+</div>
+</div>
+<div class='row' id='pages-row'></div>
 </div>
 </body>
 </html>
