--- a/app/views/competitions/score/lists/index.html.haml
+++ b/app/views/competitions/score/lists/index.html.haml
@@ -15,4 +15,4 @@
           = actions.link_to t('a.add'), new_competition_score_list_factories_path, end_icon: :square_plus
 
       = card.actions do |actions|
-        = actions.link_to 'Mehrere zusammen drucken', { format: :todo }
+        = actions.link_to 'Mehrere zusammen drucken', competition_score_list_print_generators_path
